# first-responder

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: scraper.yml
config/: config.yaml
database/: JOBS.db  add_companies.py  create_db.py
docs/: FAQS.md  career_pages.md
filter/: filters.py
markdown/: JOBS.md  JOBS_TEMP.md  JOBS_TEMPLATE.md  NON_TECHNICAL_INSTRUCTIONS.md  OTHER_JOB_BOARDS.md
notifier/: discord.py
scrapers/: ashby.py  greenhouse.py  hackernews.py  scraper.py  workday.py
